Add Delete Folder Content job by date range

--- a/Accounting/Views/Shared/_Layout.cshtml
+++ b/Accounting/Views/Shared/_Layout.cshtml
@@ -36,6 +36,9 @@
     <script src="~/js/template.js"></script>
     <script src="~/js/dashboard.js"></script>
     <script src="~/js/Ajax.js"></script>
+    <script src="~/Accounting/vendors/bootstrap-datepicker/bootstrap-datepicker.min.js"></script>
+    <script src="~/js/formpickers.js"></script>
+
 
     @RenderSection("Scripts", required: false)
 </body>
