--- a/Accounting/Views/Home/Index.cshtml
+++ b/Accounting/Views/Home/Index.cshtml
@@ -74,6 +74,28 @@
 
             </div>
         </div>
+        <div class="col-lg-12 grid-margin d-flex align-items-stretch">
+            <div class="row flex-grow">
+                <div class="col-12 grid-margin stretch-card">
+                    <div class="card">
+                        <div class="card-body">
+                            <h4>
+                                Delete Folder content by date range
+                            </h4>
+                            <hr />
+                            <br />
+                            <form asp-action="DeleteFolderContentByDateRange" method="post">
+                                <div asp-validation-summary="All" class="text-danger"></div>
+                                <partial name="_DeleteFolderContentByDateRange" model="Model" />
+                                <br />
+                                <button type="submit" class="btn btn-primary mr-2">Submit</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
 
     </div>
 </div>
@@ -81,6 +103,8 @@
 
     <script src="~/Accounting/vendors/moment/moment.min.js"></script>
     <script src="~/Accounting/vendors/tempusdominus-bootstrap-4/tempusdominus-bootstrap-4.js"></script>
+    <script src="~/Affiliate/vendors/bootstrap-datepicker/bootstrap-datepicker.min.js"></script>
+
     <script src="~/js/formpickers.js"></script>
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
