--- a/Accounting/Views/Home/_DeleteLocalFolderContentByDateRange.cshtml
+++ b/Accounting/Views/Home/_DeleteLocalFolderContentByDateRange.cshtml
@@ -1,8 +1,8 @@
-﻿@model DeleteFolderContentByDateRangeDto
+﻿@model DeleteLocalFolderContentByDateRangeDto
 
 <div class="row">
     <div class="col-12">
-        <h4 class="card-title">Day Of Week</h4>
+        <h4 class="card-title">Select Date</h4>
         <p class="card-description">Select Your Day</p>
         <div class="input-group input-daterange d-flex align-items-center">
             <input type="text" asp-for="StartDate" class="form-control" placeholder="Plesae Enter StartDate">
